install-redirect/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iotistic-utils
  labels:
    managed-by: iotistic
    component: utilities
